# sudo-privesc-rust

./: Cargo.toml  LICENSE  README.md  REMEDIATION.md  THREAT_MODEL.md  audit_results.json
demo/: demo.html  test-results.webm.webm
examples/: vulnerability_report.json
src/: main.rs
tests/: integration_test.rs
