[package]
name = "sudo-privesc-rust"
version = "0.1.0"
edition = "2024"
authors = ["Güven Şahin <Guvensla@gmail.com>"]
description = "A professional security assessment tool for Sudo NOPASSWD misconfigurations."
repository = "https://github.com/GvnTech-cmd/sudo-privesc-rust"
keywords = ["security", "rust", "audit", "pentest"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"